samples/_failures_safe/1761477450_0024a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7ae4d6a.c: In function ‘main’:
./samples/SAFE/__tmp_f7ae4d6a.c:138:5: error: expected declaration or statement at end of input
  138 |     if (input_size == 0) {
      |     ^~
./samples/SAFE/__tmp_f7ae4d6a.c:138:5: error: expected declaration or statement at end of input
